# ecommerce-analytics-pipeline

./: .env_example  .gitignore  README-pt-br.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements_project.txt
app/: Dockerfile  dashboard.py  requirements.txt
config/: country_map.py
notebooks/: 01_data_exploration.ipynb  02_data_cleaning.ipynb  03_analysis_and_viz.ipynb
schema/: models.py
scripts/: 01_monthly_revenue_trends.sql  02_top_best_selling.sql  03_average_order_by_country.sql  03_customer_segmentation.sql  04_average_order_by_country.sql  04_customer_segmentation.sql  clean_data.py  database.py  load_to_db.py
src/: Dockerfile  clean_data.py  database.py  load_to_db.py  requirements.txt
